Text Demo Complete
Added font switching to the demo.
Added three sizes of text.
Added neutral white background.

Fixed a bug with the AssetLoader causing duplicate assets.
Updated to the latest Breath development version.

--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -117,7 +117,10 @@
     <None Include=".nobuild">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Assets\testFont.ttf">
+    <None Include="Assets\Arial.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Assets\ElectricSleep.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Compile Include="Properties\AssemblyInfo.cs" />
