--- a/SoulEngineGL/SoulEngineGL.csproj
+++ b/SoulEngineGL/SoulEngineGL.csproj
@@ -28,7 +28,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <OutputPath>bin\$(MonoGamePlatform)\$(Platform)\$(Configuration)\</OutputPath>
     <DefineConstants>TRACE;LINUX</DefineConstants>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
@@ -36,39 +36,66 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>SoulEngine2018.ico</ApplicationIcon>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Soul.Examples.ECS</StartupObject>
+    <StartupObject>Soul.MainMenu</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Electric Sleep\LoadingScreen.cs" />
+    <Compile Include="Electric Sleep\MainMenu.cs" />
+    <Compile Include="Engine\Components\AnimationData.cs" />
+    <Compile Include="Engine\Components\RenderData.cs" />
+    <Compile Include="Engine\Components\TextData.cs" />
     <Compile Include="Engine\Context.cs" />
     <Compile Include="Engine\Core.cs" />
     <Compile Include="Engine\Diagnostics\Debugging.cs" />
-    <Compile Include="Engine\Display\Camera.cs" />
+    <Compile Include="Engine\Camera.cs" />
+    <Compile Include="Engine\Diagnostics\ScriptLibrary.cs" />
     <Compile Include="Engine\ECS\ComponentBase.cs" />
     <Compile Include="Engine\ECS\Entity.cs" />
+    <Compile Include="Engine\ECS\EntityTransform.cs" />
     <Compile Include="Engine\ECS\SystemBase.cs" />
+    <Compile Include="Engine\Enums\AnimationLoopType.cs" />
     <Compile Include="Engine\Enums\DiagnosticMessageType.cs" />
     <Compile Include="Engine\Enums\DisplayMode.cs" />
+    <Compile Include="Engine\Enums\DrawLocation.cs" />
+    <Compile Include="Engine\Enums\MouseButton.cs" />
+    <Compile Include="Engine\Enums\TextStyle.cs" />
+    <Compile Include="Engine\Extensions.cs" />
+    <Compile Include="Engine\Legacy\CharData.cs" />
+    <Compile Include="Engine\Legacy\DrawData.cs" />
+    <Compile Include="Engine\Legacy\Tag.cs" />
+    <Compile Include="Engine\Legacy\TagFactory.cs" />
+    <Compile Include="Engine\Legacy\Tags\Border.cs" />
+    <Compile Include="Engine\Legacy\Tags\ColorText.cs" />
+    <Compile Include="Engine\Legacy\Tags\onClick.cs" />
+    <Compile Include="Engine\Legacy\TextLine.cs" />
     <Compile Include="Engine\Meta.cs" />
     <Compile Include="Engine\Modules\AssetLoader.cs" />
     <Compile Include="Engine\Modules\ErrorHandling.cs" />
+    <Compile Include="Engine\Modules\Input.cs" />
     <Compile Include="Engine\Modules\Scripting.cs" />
     <Compile Include="Engine\Modules\WindowManager.cs" />
     <Compile Include="Engine\Scenography\Scene.cs" />
     <Compile Include="Engine\Scenography\SceneLoadArgs.cs" />
     <Compile Include="Engine\Scenography\SceneManager.cs" />
     <Compile Include="Engine\Settings.cs" />
+    <Compile Include="Engine\Systems\Animator.cs" />
+    <Compile Include="Engine\Systems\Renderer.cs" />
+    <Compile Include="Engine\Systems\TextRenderer.cs" />
+    <Compile Include="Engine\Systems\TextRenderer_LegacyCacheGeneration.cs" />
+    <Compile Include="Examples\TextDrawing.cs" />
+    <Compile Include="Examples\Drawing.cs" />
     <Compile Include="Examples\SceneLoading.cs" />
     <Compile Include="Examples\ECS.cs" />
     <None Include="Content\Defaults\font.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Content\Defaults\loadingscreen.xnb">
+    <None Include="Content\Defaults\imageTest.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Content\Defaults\missing.xnb">
@@ -104,8 +131,9 @@
       <HintPath>..\packages\Jint.2.11.58\lib\net45\Jint.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="MonoGame.Framework">
-      <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
+    <Reference Include="MonoGame.Framework, Version=3.6.0.1625, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Libraries\MonoGame.Framework.dll</HintPath>
     </Reference>
     <Reference Include="SoulLib">
       <HintPath>Libraries\Utility\SoulLib.dll</HintPath>
@@ -124,22 +152,6 @@
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
-    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\x86\SDL2.dll">
-      <Link>x86\SDL2.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\x64\SDL2.dll">
-      <Link>x64\SDL2.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\x86\soft_oal.dll">
-      <Link>x86\soft_oal.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\x64\soft_oal.dll">
-      <Link>x64\soft_oal.dll</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Include="C:\Program Files (x86)\MonoGame\v3.0\Assemblies\DesktopGL\x86\libSDL2-2.0.so.0">
       <Link>x86\libSDL2-2.0.so.0</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -160,7 +172,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SoulEngine2018.ico" />
     <Content Include="x64\SDL2.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -174,7 +185,13 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
