File reorganization, cleanup, reformatting, and examples preparation.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,65 @@
-.vs
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# Other
+
+# =========================
+# Operating System Files
+# =========================
+
+# OSX
+# =========================
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
 bin
+.vs
 obj
-*.ini
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Tests
+.axocover
+TestResults
+SoulLib.sln.DotSettings.user
+
+docs/LastBuild.log
+
+# Nuget
+packages/*
+
+# Emotion Games
 HealerGame
