--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -1,44 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{723C67BD-47EE-482D-BC0D-728211D7F5F1}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Emotion</RootNamespace>
-    <AssemblyName>Emotion</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug-SDL2|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug-SDL2\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;SDL2</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-SDL2|AnyCPU'">
+    <OutputPath>bin\Release-SDL2\</OutputPath>
+    <DefineConstants>TRACE;SDL2</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+  <PropertyGroup>
+    <ProjectGuid>{723C67BD-47EE-482D-BC0D-728211D7F5F1}</ProjectGuid>
+  </PropertyGroup>
+  <PropertyGroup>
+    <OutputType>Library</OutputType>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
+  <PropertyGroup>
+    <RootNamespace>Emotion</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -63,31 +62,31 @@
     <Compile Include="Libraries\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Extensions.cs" />
-    <Compile Include="src\External\SDL2-CS\LPUtf8StrMarshaler.cs" />
+    <Compile Include="src\External\SDL2-CS\StringMarshaler.cs" />
     <Compile Include="src\External\SDL2-CS\SDL2.cs" />
-    <Compile Include="src\External\SDL2-CS\SDL2_image.cs" />
-    <Compile Include="src\External\SDL2-CS\SDL2_mixer.cs" />
-    <Compile Include="src\External\SDL2-CS\SDL2_ttf.cs" />
+    <Compile Include="src\External\SDL2-CS\SDLImage.cs" />
+    <Compile Include="src\External\SDL2-CS\SDLMixer.cs" />
+    <Compile Include="src\External\SDL2-CS\SDLTTF.cs" />
     <Compile Include="src\Engine\Context.cs" />
     <Compile Include="src\External\Windows.cs" />
-    <Compile Include="src\Modules\AssetLoader.cs" />
-    <Compile Include="src\Modules\Input.cs" />
+    <Compile Include="src\Engine\AssetLoader.cs" />
+    <Compile Include="src\Engine\Input.cs" />
     <Compile Include="src\Objects\Bases\Transform.cs" />
     <Compile Include="src\Objects\Game\Camera.cs" />
     <Compile Include="src\Objects\Game\Map.cs" />
     <Compile Include="src\Engine\Renderer.cs" />
     <Compile Include="src\Objects\Settings.cs" />
-    <Compile Include="src\Assets\Texture.cs" />
+    <Compile Include="src\Engine\Assets\Texture.cs" />
     <Compile Include="src\Engine\Window.cs" />
     <Compile Include="src\Helpers.cs" />
     <Compile Include="src\Systems\Debugging.cs" />
-    <Compile Include="src\Systems\ExternalErrorHandler.cs" />
+    <Compile Include="src\Engine\SDLErrorHandler.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Libraries\External\x64\SDL2.dll">
+    <Content Include="Libraries\External\SDL2\x64\SDL2.dll" Condition="$(DefineConstants.Contains('SDL2'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Libraries\External\x86\SDL2.dll">
+    <Content Include="Libraries\External\SDL2\x86\SDL2.dll" Condition="$(DefineConstants.Contains('SDL2'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Compile Include="src\Meta.cs" />
