--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -37,8 +37,13 @@
     <Reference Include="FreeImage-dotnet-core, Version=4.3.6.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FreeImage-dotnet-core.4.3.6\lib\net40\FreeImage-dotnet-core.dll</HintPath>
     </Reference>
+    <Reference Include="Jint, Version=0.0.0.0, Culture=neutral, PublicKeyToken=2e92ba9c8d81157f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Jint.2.11.58\lib\net40\Jint.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -63,32 +68,36 @@
     <Compile Include="Libraries\TiledSharp\zlib\ZlibConstants.cs" />
     <Compile Include="Libraries\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Engine\Debugging\MessageSource.cs" />
+    <Compile Include="src\Engine\Debugging\MessageType.cs" />
+    <Compile Include="src\Engine\FileManager.cs" />
+    <Compile Include="src\Engine\ScriptingEngine.cs" />
     <Compile Include="src\External\SDL2-CS\StringMarshaler.cs" />
     <Compile Include="src\External\SDL2-CS\SDL2.cs" />
     <Compile Include="src\External\SDL2-CS\SDLImage.cs" />
     <Compile Include="src\External\SDL2-CS\SDLMixer.cs" />
     <Compile Include="src\External\SDL2-CS\SDLTTF.cs" />
-    <Compile Include="src\Engine\Context.cs" />
+    <Compile Include="src\Platform\Base\ContextBase.cs" />
+    <Compile Include="src\Platform\Context.cs" />
     <Compile Include="src\External\Windows.cs" />
-    <Compile Include="src\Engine\AssetLoader.cs" />
-    <Compile Include="src\Engine\Input.cs" />
+    <Compile Include="src\Platform\Assets\Loader.cs" />
+    <Compile Include="src\Platform\Input.cs" />
     <Compile Include="src\GameMath.cs" />
     <Compile Include="src\Objects\Bases\Camera.cs" />
     <Compile Include="src\Objects\Bases\Transform.cs" />
     <Compile Include="src\Objects\Game\TargetCamera.cs" />
     <Compile Include="src\Objects\Game\MouseCamera.cs" />
     <Compile Include="src\Objects\Game\Map.cs" />
-    <Compile Include="src\Engine\Renderer.cs" />
-    <Compile Include="src\Objects\Settings.cs" />
-    <Compile Include="src\Engine\Assets\Texture.cs" />
-    <Compile Include="src\Engine\Window.cs" />
+    <Compile Include="src\Platform\Renderer.cs" />
+    <Compile Include="src\Engine\Objects\Settings.cs" />
+    <Compile Include="src\Platform\Assets\Texture.cs" />
+    <Compile Include="src\Platform\Window.cs" />
     <Compile Include="src\Helpers.cs" />
     <Compile Include="src\Primitives\Color.cs" />
     <Compile Include="src\Primitives\Rectangle.cs" />
     <Compile Include="src\Primitives\Vector2.cs" />
-    <Compile Include="src\Systems\Debugging.cs" />
-    <Compile Include="src\Engine\SDLErrorHandler.cs" />
-    <Compile Include="src\Systems\EmptySystem.cs" />
+    <Compile Include="src\Engine\Debugging\Debugger.cs" />
+    <Compile Include="src\Platform\ErrorHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Libraries\External\x64\FreeImage.dll">
@@ -117,5 +126,6 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
