--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -10,6 +10,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-SDL2|AnyCPU'">
     <OutputPath>bin\Release-SDL2\</OutputPath>
@@ -20,9 +21,12 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ProjectGuid>{723C67BD-47EE-482D-BC0D-728211D7F5F1}</ProjectGuid>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -41,6 +45,15 @@
       <HintPath>..\packages\Jint.2.11.58\lib\net40\Jint.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Soul.Core">
+      <HintPath>Libraries\Soul\Soul.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Soul.Encryption">
+      <HintPath>Libraries\Soul\Soul.Encryption.dll</HintPath>
+    </Reference>
+    <Reference Include="Soul.Logging">
+      <HintPath>Libraries\Soul\Soul.Logging.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -83,11 +96,11 @@
     <Compile Include="src\Platform\Assets\Loader.cs" />
     <Compile Include="src\Platform\Input.cs" />
     <Compile Include="src\GameMath.cs" />
-    <Compile Include="src\Objects\Bases\Camera.cs" />
-    <Compile Include="src\Objects\Bases\Transform.cs" />
-    <Compile Include="src\Objects\Game\TargetCamera.cs" />
-    <Compile Include="src\Objects\Game\MouseCamera.cs" />
-    <Compile Include="src\Objects\Game\Map.cs" />
+    <Compile Include="src\Game\Objects\Camera\CameraBase.cs" />
+    <Compile Include="src\Game\Components\Transform.cs" />
+    <Compile Include="src\Game\Objects\Camera\TargetCamera.cs" />
+    <Compile Include="src\Game\Objects\Camera\MouseCamera.cs" />
+    <Compile Include="src\Game\Objects\Map.cs" />
     <Compile Include="src\Platform\Renderer.cs" />
     <Compile Include="src\Engine\Objects\Settings.cs" />
     <Compile Include="src\Platform\Assets\Texture.cs" />
