--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -91,18 +91,19 @@
     <Compile Include="src\Game\AStar\Path.cs" />
     <Compile Include="src\Game\AStar\Grid.cs" />
     <Compile Include="src\Game\AStar\Node.cs" />
-    <Compile Include="src\Platform\Base\Assets\TextureBase.cs" />
-    <Compile Include="src\Platform\SDL2\Assets\Font.cs" />
-    <Compile Include="src\Platform\Base\ContextBase.cs" />
+    <Compile Include="src\Platform\Base\Assets\Font.cs" />
+    <Compile Include="src\Platform\Base\Assets\Texture.cs" />
+    <Compile Include="src\Platform\SDL2\Assets\SDLFont.cs" />
+    <Compile Include="src\Platform\Base\Context.cs" />
     <Compile Include="src\Platform\Base\Enums\MouseKeys.cs" />
     <Compile Include="src\Platform\Base\Interfaces\IDestroyable.cs" />
     <Compile Include="src\Platform\Base\IInput.cs" />
     <Compile Include="src\Platform\Base\IRenderer.cs" />
     <Compile Include="src\Platform\SDL2\Base\NativeObject.cs" />
-    <Compile Include="src\Platform\SDL2\Context.cs" />
+    <Compile Include="src\Platform\SDL2\SDLContext.cs" />
     <Compile Include="src\External\Windows.cs" />
     <Compile Include="src\Platform\SDL2\Assets\Loader.cs" />
-    <Compile Include="src\Platform\SDL2\Input.cs" />
+    <Compile Include="src\Platform\SDL2\SDLInput.cs" />
     <Compile Include="src\GameMath.cs" />
     <Compile Include="src\Game\Objects\Camera\CameraBase.cs" />
     <Compile Include="src\Game\Components\Transform.cs" />
@@ -111,10 +112,10 @@
     <Compile Include="src\Game\Objects\Map.cs" />
     <Compile Include="src\Platform\SDL2\Objects\RenderTarget.cs" />
     <Compile Include="src\Platform\SDL2\Objects\TextDrawingSession.cs" />
-    <Compile Include="src\Platform\SDL2\Renderer.cs" />
+    <Compile Include="src\Platform\SDL2\SDLRenderer.cs" />
     <Compile Include="src\Engine\Objects\Settings.cs" />
-    <Compile Include="src\Platform\SDL2\Assets\Texture.cs" />
-    <Compile Include="src\Platform\SDL2\Window.cs" />
+    <Compile Include="src\Platform\SDL2\Assets\SDLTexture.cs" />
+    <Compile Include="src\Platform\SDL2\SDLWindow.cs" />
     <Compile Include="src\Game\Pieces\AnimatedTile.cs" />
     <Compile Include="src\Primitives\Color.cs" />
     <Compile Include="src\Primitives\Rectangle.cs" />
