--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -88,18 +88,19 @@
     <Compile Include="Libraries\SDL2-CS\SDLImage.cs" />
     <Compile Include="Libraries\SDL2-CS\SDLMixer.cs" />
     <Compile Include="Libraries\SDL2-CS\SDLTTF.cs" />
-    <Compile Include="src\Game\AStar\Path.cs" />
-    <Compile Include="src\Game\AStar\Grid.cs" />
-    <Compile Include="src\Game\AStar\Node.cs" />
+    <Compile Include="src\Game\Objects\AStar\Path.cs" />
+    <Compile Include="src\Game\Objects\AStar\Grid.cs" />
+    <Compile Include="src\Game\Objects\AStar\Node.cs" />
     <Compile Include="src\Platform\Base\Assets\Font.cs" />
     <Compile Include="src\Platform\Base\Assets\Texture.cs" />
+    <Compile Include="src\Platform\Base\Objects\TextDrawingSession.cs" />
     <Compile Include="src\Platform\SDL2\Assets\SDLFont.cs" />
     <Compile Include="src\Platform\Base\Context.cs" />
     <Compile Include="src\Platform\Base\Enums\MouseKeys.cs" />
-    <Compile Include="src\Platform\Base\Interfaces\IDestroyable.cs" />
-    <Compile Include="src\Platform\Base\IInput.cs" />
-    <Compile Include="src\Platform\Base\IRenderer.cs" />
-    <Compile Include="src\Platform\SDL2\Base\NativeObject.cs" />
+    <Compile Include="src\Platform\Base\Interfaces\Destroyable.cs" />
+    <Compile Include="src\Platform\Base\Input.cs" />
+    <Compile Include="src\Platform\Base\Renderer.cs" />
+    <Compile Include="src\Platform\SDL2\Base\INativeObject.cs" />
     <Compile Include="src\Platform\SDL2\SDLContext.cs" />
     <Compile Include="src\External\Windows.cs" />
     <Compile Include="src\Platform\SDL2\Assets\Loader.cs" />
@@ -111,7 +112,7 @@
     <Compile Include="src\Game\Objects\Camera\MouseCamera.cs" />
     <Compile Include="src\Game\Objects\Map.cs" />
     <Compile Include="src\Platform\SDL2\Objects\RenderTarget.cs" />
-    <Compile Include="src\Platform\SDL2\Objects\TextDrawingSession.cs" />
+    <Compile Include="src\Platform\SDL2\Objects\SDLTextDrawingSession.cs" />
     <Compile Include="src\Platform\SDL2\SDLRenderer.cs" />
     <Compile Include="src\Engine\Objects\Settings.cs" />
     <Compile Include="src\Platform\SDL2\Assets\SDLTexture.cs" />
