Game object improvements
Added AdvancedText rendering with wrapping, and tags.
Improved the Map object. It will now fit the size provided and will update independently of drawing.
Added a helper for safe int parsing.
Moved common logic from the SDL texture to the base platform texture.
Improved the asset loader by combining loading and getting loaded assets into one function.
The SDL renderer will now properly blend alpha.

--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -88,9 +88,12 @@
     <Compile Include="Libraries\SDL2-CS\SDLImage.cs" />
     <Compile Include="Libraries\SDL2-CS\SDLMixer.cs" />
     <Compile Include="Libraries\SDL2-CS\SDLTTF.cs" />
+    <Compile Include="src\Game\Objects\AdvancedText.cs" />
     <Compile Include="src\Game\Objects\AStar\Path.cs" />
     <Compile Include="src\Game\Objects\AStar\Grid.cs" />
     <Compile Include="src\Game\Objects\AStar\Node.cs" />
+    <Compile Include="src\Game\Pieces\TextEffect.cs" />
+    <Compile Include="src\Helpers.cs" />
     <Compile Include="src\Platform\Base\Assets\Font.cs" />
     <Compile Include="src\Platform\Base\Assets\Texture.cs" />
     <Compile Include="src\Platform\Base\Objects\TextDrawingSession.cs" />
