OpenGL ES Development and Platform Convergence

--- a/EmotionCore/packages.config
+++ b/EmotionCore/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="FreeImage-dotnet-core" version="4.3.6" targetFramework="net45" />
   <package id="Jint" version="2.11.58" targetFramework="net45" />
+  <package id="OpenTK" version="2.0.0" targetFramework="net45" />
 </packages>
