--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -16,7 +16,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-SDL2|AnyCPU'">
     <OutputPath>bin\Release-SDL2\</OutputPath>
-    <DefineConstants>TRACE;SDL2</DefineConstants>
+    <DefineConstants>TRACE;GLES</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -39,6 +39,26 @@
   <PropertyGroup>
     <RootNamespace>Emotion</RootNamespace>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug-GLES|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug-GL\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;GLES</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release-GLES|AnyCPU' ">
+    <OutputPath>bin\Release-GL\</OutputPath>
+    <DefineConstants>TRACE;SDL2</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="FreeImage-dotnet-core, Version=4.3.6.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FreeImage-dotnet-core.4.3.6\lib\net45\FreeImage-dotnet-core.dll</HintPath>
@@ -47,6 +67,9 @@
       <HintPath>..\packages\Jint.2.11.58\lib\net45\Jint.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="OpenTK, Version=2.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
+      <HintPath>..\packages\OpenTK.2.0.0\lib\net20\OpenTK.dll</HintPath>
+    </Reference>
     <Reference Include="Soul.Logging">
       <HintPath>Libraries\Soul\Soul.Logging.dll</HintPath>
     </Reference>
@@ -98,6 +121,9 @@
     <Compile Include="src\Platform\Base\Assets\Font.cs" />
     <Compile Include="src\Platform\Base\Assets\Texture.cs" />
     <Compile Include="src\Platform\Base\Objects\TextDrawingSession.cs" />
+    <Compile Include="src\Platform\GLES\GLContext.cs" />
+    <Compile Include="src\Platform\GLES\GLRenderer.cs" />
+    <Compile Include="src\Platform\GLES\GLWindow.cs" />
     <Compile Include="src\Platform\SDL2\Assets\SDLFont.cs" />
     <Compile Include="src\Platform\Base\Context.cs" />
     <Compile Include="src\Platform\Base\Enums\MouseKeys.cs" />
@@ -171,6 +197,7 @@
     <None Include="Libraries\External\x86\libSDL2-2.0.so.0">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
