--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -16,7 +16,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-SDL2|AnyCPU'">
     <OutputPath>bin\Release-SDL2\</OutputPath>
-    <DefineConstants>TRACE;GLES</DefineConstants>
+    <DefineConstants>TRACE;SDL2</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -41,7 +41,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug-GLES|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\Debug-GL\</OutputPath>
+    <OutputPath>bin\Debug-GLES\</OutputPath>
     <DefineConstants>TRACE;DEBUG;GLES</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
@@ -50,11 +50,21 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release-GLES|AnyCPU' ">
-    <OutputPath>bin\Release-GL\</OutputPath>
-    <DefineConstants>TRACE;SDL2</DefineConstants>
+    <OutputPath>bin\Release-GLES\</OutputPath>
+    <DefineConstants>TRACE;GLES</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug-Base|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug-Base\</OutputPath>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
@@ -67,7 +77,7 @@
       <HintPath>..\packages\Jint.2.11.58\lib\net45\Jint.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="OpenTK, Version=2.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
+    <Reference Include="OpenTK, Version=2.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL" Condition="$(DefineConstants.Contains('GLES'))">
       <HintPath>..\packages\OpenTK.2.0.0\lib\net20\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="Soul.Logging">
@@ -119,7 +129,9 @@
     <Compile Include="src\Game\Pieces\TextEffect.cs" />
     <Compile Include="src\Helpers.cs" />
     <Compile Include="src\Platform\Base\Assets\Font.cs" />
+    <Compile Include="src\Platform\SDL2\Assets\SDLLoader.cs" />
     <Compile Include="src\Platform\Base\Assets\Texture.cs" />
+    <Compile Include="src\Platform\Base\Assets\Loader.cs" />
     <Compile Include="src\Platform\Base\Objects\TextDrawingSession.cs" />
     <Compile Include="src\Platform\GLES\GLContext.cs" />
     <Compile Include="src\Platform\GLES\GLRenderer.cs" />
@@ -133,7 +145,6 @@
     <Compile Include="src\Platform\SDL2\Base\INativeObject.cs" />
     <Compile Include="src\Platform\SDL2\SDLContext.cs" />
     <Compile Include="src\External\Windows.cs" />
-    <Compile Include="src\Platform\SDL2\Assets\Loader.cs" />
     <Compile Include="src\Platform\SDL2\SDLInput.cs" />
     <Compile Include="src\GameMath.cs" />
     <Compile Include="src\Game\Objects\Camera\CameraBase.cs" />
@@ -153,53 +164,50 @@
     <Compile Include="src\Primitives\Vector2.cs" />
     <Compile Include="src\Engine\Debugging\Debugger.cs" />
     <Compile Include="src\Platform\SDL2\ErrorHandler.cs" />
+	<Compile Include="src\Meta.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Libraries\External\x64\FreeImage.dll">
+    <None Include="Libraries\External\x64\FreeImage.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Libraries\External\x64\libfreetype-6.dll">
+    </None>
+    <None Include="Libraries\External\x64\libfreetype-6.dll" Condition="$(DefineConstants.Contains('SDL2'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Libraries\External\x64\SDL2.dll" Condition="$(DefineConstants.Contains('SDL2'))">
+    </None>
+    <None Include="Libraries\External\x64\SDL2.dll" Condition="$(DefineConstants.Contains('SDL2'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Libraries\External\x64\SDL2_ttf.dll">
+    </None>
+    <None Include="Libraries\External\x64\SDL2_ttf.dll" Condition="$(DefineConstants.Contains('SDL2'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Libraries\External\x64\zlib1.dll">
+    </None>
+    <None Include="Libraries\External\x64\zlib1.dll" Condition="$(DefineConstants.Contains('SDL2'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Libraries\External\x86\FreeImage.dll">
+    </None>
+    <None Include="Libraries\External\x86\FreeImage.dll" Condition="$(DefineConstants.Contains('SDL2'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Libraries\External\x86\libfreetype-6.dll">
+    </None>
+    <None Include="Libraries\External\x86\libfreetype-6.dll" Condition="$(DefineConstants.Contains('SDL2'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Libraries\External\x86\SDL2.dll" Condition="$(DefineConstants.Contains('SDL2'))">
+    </None>
+    <None Include="Libraries\External\x86\SDL2.dll" Condition="$(DefineConstants.Contains('SDL2'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Compile Include="src\Meta.cs" />
-    <Content Include="Libraries\External\x86\SDL2_ttf.dll">
+    </None>
+    <None Include="Libraries\External\x86\SDL2_ttf.dll" Condition="$(DefineConstants.Contains('SDL2'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Libraries\External\x86\zlib1.dll">
+    </None>
+    <None Include="Libraries\External\x86\zlib1.dll" Condition="$(DefineConstants.Contains('SDL2'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
+    </None>
     <None Include="EmotionCore.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Libraries\External\x64\libSDL2-2.0.so.0">
+    <None Include="Libraries\External\x64\libSDL2-2.0.so.0" Condition="$(DefineConstants.Contains('SDL2'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Libraries\External\x86\libSDL2-2.0.so.0">
+    <None Include="Libraries\External\x86\libSDL2-2.0.so.0" Condition="$(DefineConstants.Contains('SDL2'))">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="OpenTK.dll.config" />
+    <None Include="OpenTK.dll.config" Condition="$(DefineConstants.Contains('GLES'))" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
