--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -108,11 +108,11 @@
     <Compile Include="Libraries\TiledSharp\zlib\ZlibConstants.cs" />
     <Compile Include="Libraries\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Engine\ThreadManager.cs" />
     <Compile Include="src\IO\Asset.cs" />
     <Compile Include="src\GLES\Text\Glyph.cs" />
     <Compile Include="src\IO\TextFile.cs" />
     <Compile Include="src\IO\Other.cs" />
-    <Compile Include="src\GLES\Framebuffer.cs" />
     <Compile Include="src\GLES\RenderTarget.cs" />
     <Compile Include="src\GLES\GlProgram.cs" />
     <Compile Include="src\GLES\Shader.cs" />
