Sound engine and various fixes.
Added a sound engine based on OpenAL using the OpenTK bindings.
 - Added OpenAL for Windows x86 and x64
 - Added FadeIn and FadeOut effects.
 - Added loading of .Wav files as a new SoundFile asset type.
 - Added SoundManager to the Debugger sources.
 - Added the SoundManager class to the Context.
 - Added example for playing sounds and effects.
While the window is not focused the engine will not draw anything. In addition layer's update cycles won't be run, but a new LightUpdate function will be in its place.
Added a small interrupt to prevent high CPU usage in the Update and Draw cycles. Does not damage performance.
Added documentation to the Layer class.
Fixed layer Unload not being called.
Fixed the UI Controller invoking clicks on controls when the mouse is held on another control and then moved.
Fixed mouse input triggering on focus gain.
Updates to the ReadMe.

--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -111,6 +111,7 @@
     <Compile Include="src\Engine\ThreadManager.cs" />
     <Compile Include="src\IO\Asset.cs" />
     <Compile Include="src\GLES\Text\Glyph.cs" />
+    <Compile Include="src\IO\SoundFile.cs" />
     <Compile Include="src\IO\TextFile.cs" />
     <Compile Include="src\IO\Other.cs" />
     <Compile Include="src\GLES\RenderTarget.cs" />
@@ -137,6 +138,11 @@
     <Compile Include="src\Game\UI\Controller.cs" />
     <Compile Include="src\Game\UI\Panel.cs" />
     <Compile Include="src\Game\Text\TextEffect.cs" />
+    <Compile Include="src\Sound\SoundFadeOut.cs" />
+    <Compile Include="src\Sound\SoundFadeIn.cs" />
+    <Compile Include="src\Sound\SoundEffect.cs" />
+    <Compile Include="src\Sound\SoundManager.cs" />
+    <Compile Include="src\Sound\Source.cs" />
     <Compile Include="src\Utils\Helpers.cs" />
     <Compile Include="src\IO\Font.cs" />
     <Compile Include="src\IO\Texture.cs" />
@@ -194,6 +200,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Libraries\x86\FreeImage.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Libraries\x64\openal32.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Libraries\x86\openal32.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
