--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -194,6 +194,9 @@
     <None Include="packages.config" />
     <EmbeddedResource Include="Embedded\Shaders\DefaultFrag.glsl" />
     <EmbeddedResource Include="Embedded\Shaders\DefaultVertex.glsl" />
+    <None Include="AppleRun.command">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="SharpFont.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
