--- a/EmotionCore/OpenTK.dll.config
+++ b/EmotionCore/OpenTK.dll.config
@@ -7,6 +7,7 @@
   <dllmap os="linux" dll="libX11" target="libX11.so.6"/>
   <dllmap os="linux" dll="libXi" target="libXi.so.6"/>
   <dllmap os="linux" dll="SDL2.dll" target="libSDL2-2.0.so.0"/>
+  <dllmap os="linux" dll="libc" target="libc.so.6"/>
   <dllmap os="osx" dll="opengl32.dll" target="/System/Library/Frameworks/OpenGL.framework/OpenGL"/>
   <dllmap os="osx" dll="openal32.dll" target="/System/Library/Frameworks/OpenAL.framework/OpenAL" />
   <dllmap os="osx" dll="alut.dll" target="/System/Library/Frameworks/OpenAL.framework/OpenAL" />
@@ -22,5 +23,4 @@
   <dllmap os="osx" dll="libXi" target="/usr/X11/lib/libXi.dylib"/>
   <dllmap os="osx" dll="libXinerama" target="/usr/X11/lib/libXinerama.dylib"/>
   <dllmap os="osx" dll="libXrandr.so.2" target="/usr/X11/lib/libXrandr.dylib"/>
-  <dllmap dll="libc" target="libc.so.6" os="!windows"/>
 </configuration>
